--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage-goatsleague</title>
-    <link rel="stylesheet" href="css/index.css" >
+    <link rel="stylesheet" href="css/GoatsLeagueStyling.css" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Playwrite+HR:wght@100..400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
- 
 </head>
 <body>
     <nav>
         <div class="navbar">
             <img src="IMG/WhatsApp_Image_2024-08-04_at_00.00.11_4c4f7b18-removebg-preview.png" class="imgnav">
             <div class="anav">
-            <a href="teams.html" class="aa" target="_blank">teams</a>
-            <a href="transfers.html" class="aa" target="_blank">transfers</a>
-            <a href="table.html" class="aa" target="_blank">timetable</a>
-            <a href="stats.html" class="aa" target="_blank">stats</a>
+            <a href="home.html" class="aa selected" target="_self">home</a>  
+            <a href="teams.html" class="aa" target="_self">teams</a>
+            <a href="transfers.html" class="aa" target="_self">transfers</a>
+            <a href="table.html" class="aa" target="_self">timetable</a>
+            <a href="stats.html" class="aa" target="_self">stats</a>
             </div>
         </div>
     </nav> 
@@ -36,7 +35,7 @@
         <div class="stats1">
         <div class="goals">
             <a href="stats.html" target="_blank">
-            <img src="IMG/452589665_1663602854477510_5205547040390091490_n-removebg-preview.png" class="goalsimg">
+            <img src="IMG/284095-removebg-preview.png" class="goalsimg">
             <p class="goalsp">top<br><span class="span1">scorer</span></p>
             </a>
             <div class="h4d">
@@ -46,7 +45,7 @@
         </div>
         <div class="assist">
             <a href="stats.html" target="_blank">
-            <img src="IMG/452589665_1663602854477510_5205547040390091490_n-removebg-preview.png" class="goalsimg">
+            <img src="IMG/284095-removebg-preview.png" class="goalsimg">
             <p class="goalsp">top<br><span class="span1">assists</span></p>            
             </a>
             <div class="h4d">
@@ -56,7 +55,7 @@
         </div>
         <div class="player">
             <a href="stats.html" target="_blank">
-            <img src="IMG/452589665_1663602854477510_5205547040390091490_n-removebg-preview.png" class="goalsimg">
+            <img src="IMG/284095-removebg-preview.png" class="goalsimg">
             <p class="goalsp">best<br><span class="span1">player</span></p>  
             </a >
             <div class="h4d">
@@ -66,7 +65,7 @@
         </div>
         <div class="def">
             <a href="stats.html" target="_blank">
-                <img src="IMG/452589665_1663602854477510_5205547040390091490_n-removebg-preview.png" class="goalsimg">
+                <img src="IMG/284095-removebg-preview.png" class="goalsimg">
                 <p class="goalsp2">best<br><span class="span1">defender</span></p>  
                 </a >
                 <div class="h4d">
@@ -77,7 +76,7 @@
         </div>
         <div class="keeper">
             <a href="stats.html" target="_blank">
-                <img src="IMG/452589665_1663602854477510_5205547040390091490_n-removebg-preview.png" class="goalsimg">
+                <img src="IMG/284095-removebg-preview.png" class="goalsimg">
                 <p class="goalsp1">best<br><span class="span1">goalkeeper</span></p>  
                 </a >
                 <div class="h4d">
@@ -88,7 +87,7 @@
         </div>
         <div class="cards">
             <a href="stats.html" target="_blank">
-                <img src="IMG/452589665_1663602854477510_5205547040390091490_n-removebg-preview.png" class="goalsimg">
+                <img src="IMG/284095-removebg-preview.png" class="goalsimg">
                 <p class="goalsp">most<br><span class="span1">cards</span></p>  
                 </a >
                 <div class="h4d">
