--- a/stats.html
+++ b/stats.html
@@ -19,8 +19,9 @@
             <div class="anav">
             <a href="index.html" class="aa" target="_blank">home</a>
             <a href="teams.html" class="aa" target="_blank">teams</a>
-            <a href="table.html" class="aa" target="_blank">timetable</a>
             <a href="transfers.html" class="aa" target="_blank">transfers</a>
+            <a href="table.html" class="aa" target="_blank">timetable</a>          
+            <a href="home.html" class="aa selected" target="_self">stats</a> 
             
             </div>
         </div>
