--- a/table.html
+++ b/table.html
@@ -20,6 +20,7 @@
             <a href="index.html" class="aa" target="_blank">home</a>
             <a href="teams.html" class="aa" target="_blank">teams</a>
             <a href="transfers.html" class="aa" target="_blank">transfers</a>
+            <a href="#" class="aa selected" target="_self">fixtures</a>
             <a href="stats.html" class="aa" target="_blank">stats</a>
             </div>
         </div>
