--- a/teams.html
+++ b/teams.html
@@ -17,10 +17,11 @@
         <div class="navbar">
             <img src="IMG/WhatsApp_Image_2024-08-04_at_00.00.11_4c4f7b18-removebg-preview.png" class="imgnav">
             <div class="anav">
-            <a href="index.html" class="aa" target="_blank">home</a>
-            <a href="transfers.html" class="aa" target="_blank">transfers</a>
-            <a href="table.html" class="aa" target="_blank">timetable</a>
-            <a href="stats.html" class="aa" target="_blank">stats</a>
+            <a href="index.html" class="aa" target="_self">home</a>
+            <a href="teams.html" class="aa selected" target="_self">teams</a>
+            <a href="transfers.html" class="aa" target="_self">transfers</a>
+            <a href="table.html" class="aa" target="_self">timetable</a>
+            <a href="stats.html" class="aa" target="_self">stats</a>
             </div>
         </div>
     </nav> 
@@ -38,7 +39,7 @@
                     <img src="IMG/world-removebg-preview.png" class="cup">
                     <span>6</span>
                 </div>
-                <p class="price">40.5 m</p>
+                <p class="price">40.5M</p>
             </div>
             <table border="5px">
                 <tr>
@@ -92,7 +93,7 @@
                     <img src="IMG/world-removebg-preview.png" class="cup">
                     <span>1</span>
                 </div>
-                <p class="price">40.5 m</p>
+                <p class="price">40.5M</p>
             </div>
             <table border="5px">
                 <tr>
@@ -146,7 +147,7 @@
                     <img src="IMG/world-removebg-preview.png" class="cup">
                     <span>6</span>
                 </div>
-                <p class="price">40.5 m</p>
+                <p class="price">40.5M</p>
             </div>
             <table border="5px">
                 <tr>
@@ -200,7 +201,7 @@
                     <img src="IMG/world-removebg-preview.png" class="cup">
                     <span>6</span>
                 </div>
-                <p class="price">40.5 m</p>
+                <p class="price">40.5M</p>
             </div>
             <table border="5px">
                 <tr>
@@ -254,7 +255,7 @@
                     <img src="IMG/world-removebg-preview.png" class="cup">
                     <span>6</span>
                 </div>
-                <p class="price">40.5 m</p>
+                <p class="price">40.5M</p>
             </div>
             <table border="5px">
                 <tr>
